# unison-orchestration

./: .cursorrules  .dockerignore  .gitignore  CC_HANDOFF_PROMPT.md  GTM_REGISTRY_SUBMISSIONS.md  NICHE_CORPUS_ROADMAP.md  UNISON_STATE.md  benchmark_bot.py  ecosystem.config.js  smithery.yaml  unison_brand_identity.tsx
benchmarks/: 2026-06-02.md  benchmark_bot.py  gtm-2026-06-04.md  gtm-2026-06-07.md  gtm-2026-06-08.md  gtm-2026-06-09.md  gtm-2026-06-10.md  index.md
client-agent/: .env.example  base_builder.py  requirements.txt  smithery_router.py  swarm_commander.py  unison_agent_config.py  unison_client.py
core-mcp-server/: Cargo.toml  Dockerfile  deploy-fly.sh  fly.toml
core-mcp-server/src/: main.rs  persistence.rs  task_queue.rs  workflow_store.rs
core-mcp-server/src/retrieval/: embed.rs  mod.rs  qdrant.rs
data-ingestion/: .env.example  _pipeline_common.py  autonomous_knowledge_agent.py  ensure_zero_trap_collection.py  ingest_tcg_json.py  pipeline.py  pipeline_aerospace.py  pipeline_agglutinative.py  pipeline_agronomy.py  pipeline_arbitrage.py  pipeline_architecture.py  pipeline_arxiv.py  pipeline_astrophysics.py  pipeline_batch_expansion.py  pipeline_biotech.py  pipeline_canonical_history.py  pipeline_cartography.py  pipeline_chemistry.py  pipeline_collectibles.py  pipeline_courtlistener.py  pipeline_cyber.py  pipeline_dtc.py  pipeline_edgar.py  pipeline_engineering.py  pipeline_financial.py  pipeline_genetics.py  pipeline_geonames.py  pipeline_github_cad.py  pipeline_gutenberg.py  pipeline_hydro_history.py  pipeline_hydrodynamics.py  pipeline_infrastructure.py  pipeline_intelligence.py  pipeline_legal.py  pipeline_linguistics.py  pipeline_local_pdf.py  pipeline_macroeconomics.py  pipeline_manufacturing.py  pipeline_materials.py  pipeline_mathematics.py  (+13 more)
distribution-agents/: gtm_swarm_coordinator.py
docs/: A2A_AFFILIATE_PROTOCOL.md  AUTONOMOUS_AGENTS.md  CLOUDFLARE_DNS.md  FLY_MULTI_REGION_SCALE.md  LATENCY_ARCHITECTURE.md  LATENCY_OPTIMIZATION.md  PHASE_2A_DEPLOY.md  PHASE_2B_DEPLOY.md  PHASE_2C_DEPLOY.md  PHASE_2D_DEPLOY.md  PHASE_3_DISTRIBUTION.md  PHASE_3_SCALE.md  PRODUCTION_OPERATIONS.md  SCALING_PLAYBOOK_100K.md  STEADY_STATE_OPERATIONS.md
edge-routing/: package-lock.json  package.json  wrangler.toml
examples/: cursor-mcp-snippet.json
frontend/: .env.example  CLOUDFLARE_DEPLOYMENT.md  dev.sh  next.config.ts  package-lock.json  package.json  proxy.ts  vercel.json
(+342 files in other folders)
