[package]
name = "core-mcp-server"
version = "0.1.0"
edition = "2021"
description = "Unison Orchestration — MCP semantic search server"

[[bin]]
name = "core-mcp-server"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["query"] }

# CORS + middleware layers
tower-http = { version = "0.5", features = ["cors"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client (OpenAI + Qdrant — separate pooled clients)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Embedding cache (lock-free async LRU/TTL)
moka = { version = "0.12", features = ["future"] }
blake3 = "1"

# Qdrant Cloud vector DB — REST over pooled keep-alive (optional private VPC URL)

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Environment variable loading
dotenvy = "0.15"

# Structured logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "2"
anyhow = "1"

# Durable telemetry counters (Fly volume-backed SQLite)
rusqlite = { version = "0.32", features = ["bundled"] }

# Task queue tracking IDs
uuid = { version = "1", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
